# ai-dev-tasks

./: .bandit  .chat_history  .coverage  .coveragerc  .cursorrules  .cursorrules-coding-standards  .cursorrules-development-workflow  .cursorrules-documentation-standards  .cursorrules-governance  .cursorrules-memory-context  .cursorrules-testing-validation  .cz.yaml  .env  .env.example  .envrc  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  .mcp-server.err  .mcp-server.err.backup  .mcp-server.err.backup2  .mcp-server.out  .mcp-server.out.backup  .mcp-server.out.backup2  .pre-commit-config.yaml  .pre-commit-config.yml  .sqlfluff  000_backlog.md  001_create-prd.md  002_generate-tasks.md  003_process-task-list-B-032-Memory-Context-System-Architecture-Research.md  003_process-task-list-B-093-Doorway-Scribe-Auto-Rehydrate.md  003_process-task-list-B-100-coder-role.md  003_process-task-list-B-1003-DSPy-Multi-Agent-System.md  003_process-task-list-B-1004-Simplify-Overengineered-Quality-Gates.md  003_process-task-list-B-1006-A-DSPy-3.0-Core-Parity-Migration.md  003_process-task-list-B-1006-B-DSPy-3.0-Research-Enhanced-Assertions.md  003_process-task-list-B-1006-DSPy-3.0-Migration.md  003_process-task-list-B-1007-Pydantic-AI-Style-Enhancements.md  (+360 more)
600_archives/dspy-rag-system-archive/dspy-rag-system/: .env  .pylintrc  =1.4.0  B-1007_COMPLETION_SUMMARY.md  DSPY_MULTI_AGENT_COMPLETION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README_BULK_PROCESSING.md  TEST_RESULTS_SUMMARY.md  __init__.py  add_chunks_to_existing.py  backward_compatibility_standalone.py  benchmark_vector_store.py  check_status.sh  cleanup_database_paths.py  cursor_integration.py  dashboard_integration_standalone.py  demo_metrics_dashboard.py  demo_signature_validation.py  eval_gold.py  evaluation_approach_discussion.py  final_integration_test.py  gate_simplification_discussion.py  install_test_dependencies.sh  phase2_evaluation.py  pyproject.toml  (+46 more)
dspy-rag-system/: .coverage  .coverage.Mac.attlocal.net.13415.XXMzgQDx  .coverage.Mac.attlocal.net.92253.XCvEWaOx  .env  400_context-priority-guide.md  400_project-overview.md  CURRENT_STATUS.md  DEEP_RESEARCH_VERIFICATION.md  DOCUMENTATION_STATUS.md  DSPY_INTEGRATION_GUIDE.md  DSPY_V2_TECHNICAL_IMPLEMENTATION_GUIDE.md  ENHANCED_DSPY_GUIDE.md  IMPORT_SOLUTION.md  NOTIFICATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUALITY_ANALYSIS_SUMMARY.md  QUICK_START.md  README.md  README_BULK_PROCESSING.md  SYSTEM_SERVICE_GUIDE.md  VERSION_HISTORY.md  WATCH_FOLDER_GUIDE.md  WATCH_FOLDER_OPTIONS.md  __init__.py  add_anchor_documents.py  add_chunks_to_existing.py  add_document.py  add_ltst_tables.py  backward_compatibility_standalone.py  baseline_rag_performance_test.py  benchmark_entity_expansion.py  benchmark_vector_store.py  bulk_add_core_documents.py  check_status.sh  ci_test_runner.py  clean_slate_schema.sql  cleanup_database_paths.py  complex_test.py.disabled  cursor_integration.py  debug_search.py  (+112 more)
dspy-rag-system/.diagnostics/: baseline.txt
dspy-rag-system/config/: metadata_rules.yaml
dspy-rag-system/docs/: 400_ltst-memory-system-integration-guide.md  400_ltst-memory-system-performance-guide.md  400_multi-tenant-indexing-strategy.md  CHATGPT_ANALYSIS_PROMPT.md  CHATGPT_DUPLICATE_RESOLUTION_PROMPT_V2.md  CLEAN_SLATE_MIGRATION.md  CURRENT_STATUS.md  DSPY_INTEGRATION_GUIDE.md  IMPORT_CONFLICT_ANALYSIS.md  MEMORY_REHYDRATOR_INTEGRATION.md  VERSION_HISTORY.md  ltst_memory_schema_documentation.md  ltst_test_results.md  mistral7b_instruct_integration_guide.md  system_service_guide.md  troubleshooting-faq.md  watch_folder_guide.md
dspy-rag-system/processed_documents/: 400_ai-constitution.md  400_code-criticality-guide.md  400_file-analysis-guide.md  400_testing-strategy-guide.md  PDF_Extraction v6.txt  Time - Airport Plan.txt  Updated_Schema_Instructions_v21.txt
dspy-rag-system/scripts/: apply_clean_slate_schema.py  apply_vector_enhancement.py  check_pgvector_version.py  database_maintenance.py  database_utils.py  hydration_benchmark.py  ingest_enhanced.py  ingest_integrated.py  ingest_observability.py  migrate_conversation_schema.py  migrate_conversation_schema_fixed.py  migrate_decision_intelligence_schema.py  optimize_ltst_performance.py  performance_optimization.py  rollback_ltst_migration.py  run_chunk_experiments.py  security_scan.py  setup.sh  setup_secrets.py  setup_test_db.py  simple_vector_enhancement.py  standardize_test_imports.py
dspy-rag-system/src/: __init__.py  dashboard.py  enhanced_rag_system.py  enhanced_vector_store.py  nicegui_graph_view.py  rag_system.py  watch_folder.py
dspy-rag-system/test_documents/: sample_test.txt
dspy-rag-system/tests/: README-dev.md  README.md  __init__.py  comprehensive_test_suite.py  test_anchor_metadata.py  test_assertion_framework.py  test_backlog_scrubber.py  test_cluster_visualization.py  test_constitution_validation.py  test_context_merger.py  test_context_models.py  test_cursor_context_engineering.py  test_database_resilience.py  test_debugging_shadow_fork.py  test_document_processor.py  test_document_processor_anchor.py  test_document_processor_anchor_fixed.py  test_dynamic_prompts.py  test_enhanced_debugging.py  test_enhanced_file_validator.py  test_enhanced_rag_system.py  test_entity_expansion.py  test_episodic_reflection_store.py  test_error_pattern_recognition.py  test_error_taxonomy.py  test_github_server.py  test_graph_data_endpoint.py  test_hotfix_templates.py  test_hydration_quality.py  test_integration.py  test_labeled_few_shot_optimizer.py  test_lang_extract_system.py  test_logger.py  test_ltst_end_to_end.py  test_ltst_integration.py  test_ltst_integration_core.py  test_ltst_memory_schema.py  test_ltst_schema.py  test_ltst_schema_validation.py  test_mcp_base.py  (+42 more)
dspy-rag-system/train/: fusion_dataset.py  persist_training_features.py
dspy-rag-system/watch_folder/: 000_backlog.md  100_cursor-memory-context.md  104_dspy-development-context.md  400_context-priority-guide.md  400_integration-patterns-guide.md  400_system-overview.md  final_test.txt  sample_data.csv  test_document.md  test_verification.txt
(+8695 files in other folders)
