[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-rag-system"
version = "0.1.0"
description = "DSPy RAG System"
requires-python = ">=3.8"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "Darwin"
venvPath = ".."
venv = "venv"
extraPaths = ["src", "../venv/lib/python3.*/site-packages"]
include = ["src", "*.py"]
exclude = ["venv", "**/__pycache__", ".pytest_cache", "tests"]
reportMissingImports = false
reportMissingTypeStubs = false

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["venv", "**/__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]        # Line too long - handled by black

[tool.ruff.lint.per-file-ignores]
"setup_imports.py" = ["E501"]
"add_chunks_to_existing.py" = ["E501"]
"add_anchor_documents.py" = ["E501"]
"src/dspy_modules/vector_store.py" = ["E501"]
"src/dspy_modules/lang_extract_system.py" = ["E501"]
"src/dspy_modules/cursor_model_router.py" = ["E501"]
"src/dspy_modules/documentation_retrieval.py" = ["E501"]
